@@ -3,6 +3,8 @@ $Id: ChangeLog,v 1.81 2010/06/07 19:50:04 stewy Exp $
 ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html
 
 MaKL x.y.z
+	- mk: bug in mkdep.gcc.sh helper that was causing a compilation error on
+	      new versions of GCC (e.g. Ubuntu Oneiric with GCC 4.6.1)
 	- cf: makl_test_dir() to specify custom directory for test files ;
 	      a couple of --help fixes and cleanup ; fixed featx varname parameter ;
 	      cmdline args for dash-separated ids not working
